# distributed-ml-hpc

./: .gitignore  README.md  pyproject.toml  setup.py
config/: config.ini
distributed-ml/: __init__.py  agent.py  dataset.py  encoders.py  environment.py  moe.py  randomstack.py  run.py  run_no_mpi.py  utils.py
examples/: design.ipynb  design.py  design.sh
tests/: test_randstack.py
tests/agents/: test_moe_design.py  test_moe_env.py  test_moe_init.py  test_optimize_design.py  test_update_design.py
tests/metrics/: test_roc_curve.py
tests/moe/: __test_get_msq.py  test_performance.py
tests/processing/: __test_get_data.py  __test_read_json.py  __test_write_to_db.py  test_excel_to_json.py  test_interpolate_1d.py  test_read_csv.py  test_read_xlsx.py
tests/utils/: test_random_layers.py  test_regression_vector.py  test_spec_mean.py  test_spec_norm.py  test_system_response.py  test_theta_range.py  test_total_thickness.py
